# lazyprocess

./: .gitignore  README.md  pyproject.toml
lazyprocess/: app.py  config.py
lazyprocess/controllers/: edit.py
lazyprocess/models/: edit.py
lazyprocess/repositories/: edit.py
lazyprocess/routes/: edit.py
lazyprocess/services/: edit.py  editQueueThread.py  editor.py  sender.py
lazyprocess/utils/: queue.py
