[tool.poetry]
name = "lazyprocess"
version = "0.1.0"
description = ""
authors = ["pab-h <dev.pab.2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
pillow = "^10.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
